--- a/styles/base.css
+++ b/styles/base.css
@@ -1,18 +1,18 @@
-body {
-  color: red;
-  padding: 2em;
-  text-align: center;
+* {
+  box-sizing: border-box;
 }
 
-.flex-container {
-  display: flex;
-  flex-shrink: inherit;
-  flex-flow: row wrap;
+body {
+  color: red;
+  font-weight: bold;
+  padding: 2em;
+  text-align: center;
 }
 
 .flex-container > * {
   border: 1px black solid;
   text-align: center;
+  flex: 1 100%;
   height: 100px;
   width: 100px;
 }
