--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,20 +1,62 @@
 @media screen and (min-width: 800px){
-  .container {
-    flex-direction: row;
+  .flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row wrap;
+  }
+  .item-a { order: -2; height: 100px; flex-basis: 100%; }
+  .item-b { order: -1; height: 600px; flex: 0 0 20%;
+
+  }
+  .item-c, .item-d { 
+    order: 0;
+    height: 200px;
+    flex: 1 1 40%;
+  }
+  .item-e, .item-f, .item-g, .item-h {
+    order: 1;
+    height: 250px;
+    flex: 1 1 10%;
+  }
+  .item-i {
+    order: 2;
+    height: 150px;
   }
 }
+/*@media screen and (min-width: 800px){
+  .flex-container {
+    flex-direction: row;
+    display: flex;
+  }
+  .item-a { order: -1; width: 100%}
+  .item-b { 
+    order: 1; 
+    flex: 1 1 20%;
+    height: 600px;
+  }
+  .item-c, .item-d { 
+    order: 2;
+    flex: 2 2 40%;
+    height: 200px;
+  }
+  .item-e, .item-f, .item-g, .item-h {
+    order: 3;
+    flex: 1 0;
+    height: 250px;
+  }
+  .item-i { order: 4; width:100%; }
+}*/
 
 @media screen and (max-width: 800px){
   .flex-container { 
-    flex-direction: column wrap; 
+    display: flex;
+    flex-flow: row wrap;
     justify-content: center;
-    align-items: center;
-    align-content: stretch;
   }
   .item-a { order: 1; height: 75px; width: 100%; }
-  .item-b { order: 2; height: 150px; width: 100%;}
-  .item-c { order: 3; height: 125px; width: 100%;}
-  .item-d { order: 4; height: 125px; width: 100%;}
+  .item-b { order: 2; height: 150px; width: 100%; }
+  .item-c { order: 3; height: 125px; width: 100%; } 
+  .item-d { order: 4; height: 125px; width: 100%; }
   .item-e, .item-f{ 
     flex: 1 1 40%;
     height: 250px;
@@ -25,5 +67,5 @@
     height: 250px;
     order: 6; 
   }
-  .item-i { order: 7; height: 80px; width: 100%}
+  .item-i { order: 7; height: 80px; width: 100% }
 }
